[package]
name = "rust_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json =  { version ="1.0"}
